# spinning-cube

./: LICENSE  README.md  pyproject.toml
spinning_cube/src/: spinning_cube.py
