[project]
name = "spinning_cube"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Han",email = "hanjasn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry (>=2.0.1,<3.0.0)"
]

[project.scripts]
run = "spinning_cube.src.spinning_cube:main"

# [tool.poetry]
# packages = [
#     { include = "spinning_cube" }
# ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
